--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.3",
   "devDependencies": {
     "grunt": "~0.4.2",
-    "grunt-contrib-jshint": "~0.6.3",
-    "grunt-contrib-nodeunit": "~0.2.0",
-    "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-coffee": "~0.10.1"
+    "grunt-contrib-coffee": "~0.10.1",
+    "grunt-contrib-jasmine": "~0.6.1",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-bower-task": "~0.3.4"
   }
 }
