--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "angular-orm",
+  "name": "relational-model",
   "version": "0.1.3",
-  "main": "dist/angular-orm.js",
+  "main": "dist/relational-model.js",
   "dependencies": {
     "sugar": "https://github.com/andrewplummer/Sugar.git",
     "underscore": "https://github.com/jashkenas/underscore.git"
