--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,14 @@
 {
   "name": "relational-model",
-  "version": "0.1.3",
+  "description": "ORM-mappings for client-side objects. Has-many, has-one & belongs-to.",
+  "keywords": [ "orm", "relational", "associations", "has-many", "has-one", "belongs-to" ],
+  "version": "0.1.4",
+  "authors": [ "Ruben Swieringa" ],
+  "homepage": "http://www.github.com/nedap/relational-model",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/nedap/relational-model.git"
+  },
   "main": "dist/relational-model.js",
   "dependencies": {
     "underscore": "https://github.com/jashkenas/underscore.git"
